# broadlink-listener

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .yamllint  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: complete.yml  dev.yml  docs  docs.yml  preview  preview.yml  release  release.yml
LICENSES/: MIT.txt
broadlink_listener/: __init__.py  broadlink_listener.py
broadlink_listener/cli_tools/: __init__.py  broadlink_manager.py  cli.py  smartir_manager.py  utils.py
docs/: Makefile  make.bat
docs/source/: api.rst  conf.py  index.rst  installation.rst  usage.rst
real_data/: 1124.json  1124.json.license
tests/: __init__.py  conftest.py  test_broadlink_listener.py  test_broadlink_manager.py  test_cli.py  test_smartir_manager.py  test_utils.py
tests/data/: good_data_op_fan_mode.json  good_data_op_fan_swing_mode.json  good_data_op_mode.json  good_data_op_swing_mode.json  missing_required_max_temp.json  missing_required_max_temp.json.license  missing_required_min_temp.json  missing_required_operation_modes.json  not_base64.json  not_broadlink.json
tests/partial_dicts/: good_data_op_fan_swing_mode_tmp_003.json  good_data_op_swing_mode_tmp_002.json  good_data_op_swing_mode_tmp_003.json
